update ipfs version used in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: java
 jdk:
   - oraclejdk8
 before_script:
-  - wget https://dist.ipfs.io/go-ipfs/v0.4.11/go-ipfs_v0.4.11_linux-amd64.tar.gz -O /tmp/go-ipfs_v0.4.11_linux-amd64.tar.gz
-  - tar -xvf /tmp/go-ipfs_v0.4.11_linux-amd64.tar.gz
+  - wget https://dist.ipfs.io/go-ipfs/v0.4.13/go-ipfs_v0.4.13_linux-amd64.tar.gz -O /tmp/go-ipfs_linux-amd64.tar.gz
+  - tar -xvf /tmp/go-ipfs_linux-amd64.tar.gz
   - export PATH=$PATH:$PWD/go-ipfs/
   - ipfs init
   - ipfs daemon --enable-pubsub-experiment &
