--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.ipfs</groupId>
-	<artifactId>api</artifactId>
-	<version>v1.2.1</version>
+    <groupId>com.github.ipfs</groupId>
+    <artifactId>java-ipfs-api</artifactId>
+	<version>v1.2.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>java-ipfs-api</name>
