--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.ipfs</groupId>
 	<artifactId>api</artifactId>
-	<version>v1.2.1-SNAPSHOT</version>
+	<version>v1.2.1</version>
 	<packaging>jar</packaging>
 
 	<name>java-ipfs-api</name>
