--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.ipfs</groupId>
     <artifactId>java-ipfs-api</artifactId>
-	<version>v1.2.2-SNAPSHOT</version>
+	<version>v1.2.2</version>
 	<packaging>jar</packaging>
 
 	<name>java-ipfs-api</name>
