[docker-compose] Keep IPFS version in sync with Travis configuration
Signed-off-by: Mykola Nikishov <mn@mn.com.ua>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   ipfs-daemon:
-    image: 'ipfs/go-ipfs'
+    image: 'ipfs/go-ipfs:v0.4.16'
     ports:
       - "4001:4001"
       - "5001:5001"
