--- a/pom.xml
+++ b/pom.xml
@@ -73,10 +73,16 @@
 			<version>1.0.0-beta7</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.nd4j</groupId>
+    		<artifactId>nd4j-api</artifactId>
+    		<version>1.0.0-beta7</version>
+		</dependency>
+		<dependency>
 			<groupId>org.nd4j</groupId>
-			<artifactId>nd4j-native-platform</artifactId>
+			<artifactId>nd4j-native</artifactId>
 			<version>1.0.0-beta7</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.web3j</groupId>
 			<artifactId>core</artifactId>
