--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,11 @@
 			<artifactId>nd4j-native</artifactId>
 			<version>1.0.0-beta7</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.web3j</groupId>
 			<artifactId>core</artifactId>
@@ -103,6 +107,7 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
